--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1603,6 +1603,8 @@ body {
 }
 /* line 530, ../../sass/module/tm.scss */
 .msg-history .pager {
+  position: relative;
+  z-index: 9;
   padding: 5px 15px;
   background-color: #f2f2f2;
 }
@@ -1618,7 +1620,7 @@ body {
 .msg-history .pager:after {
   clear: both;
 }
-/* line 534, ../../sass/module/tm.scss */
+/* line 536, ../../sass/module/tm.scss */
 .msg-history .pager .search {
   float: left;
   width: 56px;
@@ -1629,20 +1631,20 @@ body {
   border: 1px solid #f2f2f2;
   border-radius: 2px;
 }
-/* line 543, ../../sass/module/tm.scss */
+/* line 545, ../../sass/module/tm.scss */
 .msg-history .pager .search .iconfont-search {
   margin-right: 5px;
   font-size: 14px;
 }
-/* line 547, ../../sass/module/tm.scss */
+/* line 549, ../../sass/module/tm.scss */
 .msg-history .pager .search:hover {
   border: 1px solid #999999;
 }
-/* line 551, ../../sass/module/tm.scss */
+/* line 553, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav {
   float: right;
 }
-/* line 553, ../../sass/module/tm.scss */
+/* line 555, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav input {
   height: 20px;
   line-height: 20px;
@@ -1651,7 +1653,7 @@ body {
   border: 1px solid #e6e6e6;
   font-size: 12px;
 }
-/* line 561, ../../sass/module/tm.scss */
+/* line 563, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav .iconfont {
   display: inline-block;
   padding: 0 3px;
@@ -1661,19 +1663,19 @@ body {
   cursor: pointer;
   font-size: 14px;
 }
-/* line 569, ../../sass/module/tm.scss */
+/* line 571, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav .iconfont:hover {
   border: 1px solid #999999;
 }
 
-/* line 594, ../../sass/module/tm.scss */
+/* line 596, ../../sass/module/tm.scss */
 .iconfont-set {
   -webkit-transition: all ease 1s;
   -moz-transition: all ease 1s;
   -o-transition: all ease 1s;
   transition: all ease 1s;
 }
-/* line 596, ../../sass/module/tm.scss */
+/* line 598, ../../sass/module/tm.scss */
 .iconfont-set:hover {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -1682,14 +1684,14 @@ body {
   transform: rotate(180deg);
 }
 
-/* line 600, ../../sass/module/tm.scss */
+/* line 602, ../../sass/module/tm.scss */
 .iconfont-close {
   -webkit-transition: all ease 0.5s;
   -moz-transition: all ease 0.5s;
   -o-transition: all ease 0.5s;
   transition: all ease 0.5s;
 }
-/* line 602, ../../sass/module/tm.scss */
+/* line 604, ../../sass/module/tm.scss */
 .iconfont-close:hover {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -1698,7 +1700,7 @@ body {
   transform: rotate(180deg);
 }
 
-/* line 609, ../../sass/module/tm.scss */
+/* line 611, ../../sass/module/tm.scss */
 .fadeInL {
   opacity: 1;
   -webkit-transform: translateX(0px);
@@ -1708,7 +1710,7 @@ body {
   transform: translateX(0px);
 }
 
-/* line 613, ../../sass/module/tm.scss */
+/* line 615, ../../sass/module/tm.scss */
 .fadeOutL {
   opacity: 0;
   -webkit-transform: translateX(-330px);
@@ -1718,7 +1720,7 @@ body {
   transform: translateX(-330px);
 }
 
-/* line 619, ../../sass/module/tm.scss */
+/* line 621, ../../sass/module/tm.scss */
 .fadeInB {
   opacity: 1;
   -webkit-transform: translateY(0px);
@@ -1728,12 +1730,12 @@ body {
   transform: translateY(0px);
 }
 
-/* line 623, ../../sass/module/tm.scss */
+/* line 625, ../../sass/module/tm.scss */
 .fadeOutB {
   opacity: 0;
-  -webkit-transform: translateY(58px);
-  -moz-transform: translateY(58px);
-  -ms-transform: translateY(58px);
-  -o-transform: translateY(58px);
-  transform: translateY(58px);
+  -webkit-transform: translateY(30px);
+  -moz-transform: translateY(30px);
+  -ms-transform: translateY(30px);
+  -o-transform: translateY(30px);
+  transform: translateY(30px);
 }
