--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -368,7 +368,7 @@ body{
       font-size: 12px;
       text-align: left;
       .iconfont-information{
-        color: red;
+        color: #f7411a;
         vertical-align: -1px;
       }
     }
