--- a/style/css/ui/ui_pop.css
+++ b/style/css/ui/ui_pop.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* line 14, ../../sass/ui/ui_pop.scss */
+/* line 12, ../../sass/ui/ui_pop.scss */
 .alpha {
   width: 100%;
   height: 100%;
@@ -14,61 +14,56 @@
   display: none;
 }
 
-/* line 22, ../../sass/ui/ui_pop.scss */
+/* line 20, ../../sass/ui/ui_pop.scss */
 .pop {
   display: none;
   width: 400px;
   background-color: #fff;
-  border: 5px solid #4c4c4c;
   position: absolute;
   z-index: 999;
 }
-/* line 29, ../../sass/ui/ui_pop.scss */
+/* line 26, ../../sass/ui/ui_pop.scss */
 .pop .pop-hd {
-  padding: 0 10px;
-  height: 34px;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #e6e6e6;
+  padding: 0 25px;
+  height: 50px;
+  background-color: #49e;
+  color: #fff;
   overflow: hidden;
-  *zoom: 1;
 }
-/* line 36, ../../sass/ui/ui_pop.scss */
+/* line 32, ../../sass/ui/ui_pop.scss */
 .pop .pop-hd h3 {
   float: left;
-  font-size: 14px;
-  line-height: 34px;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 50px;
 }
-/* line 41, ../../sass/ui/ui_pop.scss */
-.pop .pop-hd .icon-close {
+/* line 38, ../../sass/ui/ui_pop.scss */
+.pop .pop-hd .iconfont-close {
   float: right;
-  margin-top: 9px;
+  margin-top: 12px;
   cursor: pointer;
 }
-/* line 47, ../../sass/ui/ui_pop.scss */
-.pop .pop-bd {
-  padding: 10px;
-}
-/* line 48, ../../sass/ui/ui_pop.scss */
+/* line 44, ../../sass/ui/ui_pop.scss */
 .pop .pop-ft {
   padding: 15px 0 10px;
   text-align: center;
 }
-/* line 51, ../../sass/ui/ui_pop.scss */
+/* line 47, ../../sass/ui/ui_pop.scss */
 .pop .pop-ft .btn {
   margin: 0 5px;
 }
 
-/* line 57, ../../sass/ui/ui_pop.scss */
+/* line 53, ../../sass/ui/ui_pop.scss */
 .pop-alert {
   width: 300px;
 }
-/* line 59, ../../sass/ui/ui_pop.scss */
+/* line 55, ../../sass/ui/ui_pop.scss */
 .pop-alert .pop-bd {
   font-size: 14px;
   padding: 20px;
 }
 
-/* line 65, ../../sass/ui/ui_pop.scss */
+/* line 61, ../../sass/ui/ui_pop.scss */
 .tip-alpha {
   width: 100%;
   height: 100%;
@@ -79,4 +74,9 @@
   opacity: 0.5;
   filter: alpha(opacity=50);
   z-index: 100;
+}
+
+/* line 67, ../../sass/ui/ui_pop.scss */
+.pop-m {
+  width: 600px;
 }
