--- a/style/sass/base/common.scss
+++ b/style/sass/base/common.scss
@@ -131,17 +131,13 @@ ol{
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #b7cceb;
-}
-input:-moz-placeholder,
-textarea:-moz-placeholder {
-  color: #b7cceb;
+  color: #999;
 }
 input::-moz-placeholder,
 textarea::-moz-placeholder {
-  color: #b7cceb;
+  color: #999;
 }
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
-  color: #b7cceb;
+  color: #999;
 }
