--- a/style/css/base/common.css
+++ b/style/css/base/common.css
@@ -153,23 +153,17 @@ ol li {
 /* line 133, ../../sass/base/common.scss */
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #b7cceb;
+  color: #999;
 }
 
 /* line 137, ../../sass/base/common.scss */
-input:-moz-placeholder,
-textarea:-moz-placeholder {
-  color: #b7cceb;
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #999;
 }
 
 /* line 141, ../../sass/base/common.scss */
-input::-moz-placeholder,
-textarea::-moz-placeholder {
-  color: #b7cceb;
-}
-
-/* line 145, ../../sass/base/common.scss */
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
-  color: #b7cceb;
+  color: #999;
 }
