--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -16,6 +16,7 @@
 @import "../ui/ui_button";
 @import "../ui/ui_pop";
 @import "../ui/ui_form";
+@import "../ui/ui_tab";
 
 
 
@@ -130,6 +131,18 @@ body{
   line-height: 32px;
   padding-left: 20px;
   background-color: #3387dd;
+  input::-webkit-input-placeholder,
+  textarea::-webkit-input-placeholder {
+    color: #b7cceb;
+  }
+  input::-moz-placeholder,
+  textarea::-moz-placeholder {
+    color: #b7cceb;
+  }
+  input:-ms-input-placeholder,
+  textarea:-ms-input-placeholder {
+    color: #b7cceb;
+  }
   .txt{
     margin-left: 10px;
     border: none;
@@ -588,7 +601,10 @@ body{
 
 // 客服设置
 .pop-service{
-  
+  .txtarea{
+    width: 100%;
+    height: 80px;
+  }
 }
 
 
